tests/fixtures/valid/docs_ready_logic.lby
fn ready value i64 enabled bool -> bool
    enabled and value > 0
