tests/fixtures/invalid/missing_return.lby
fn missing -> i64
    return
